# my-github-orgs

./: README.md  app.py  get_data.graphql  github_api.py  models.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml  test.yml
graphql_client/: __init__.py  client.py  enums.py  get_user_orgs.py  input_types.py
my_github_orgs/: github_api.py  models.py
tests/: test_app.py
