[tool.poetry]
name = "my-github-organizations"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
pydantic = "^2.6.4"
streamlit-option-menu = "^0.3.12"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "streamlit run app.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
