[tool.poetry]
name = "my-github-organizations"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
pydantic = "^2.8.2"
streamlit-option-menu = "^0.3.13"

[tool.poetry.group.dev.dependencies]
rich = "^13.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "streamlit run app.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
